--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,5 @@
 logging.level.org.springframework.web=DEBUG
-
-
 server.port=8080
-# Flyway h2
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2
-
-#spring.datasource.url=jdbc:h2:file:~/cars_java;DATABASE_TO_UPPER=false
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.datasource.driver-class-name=org.h2.Driver
 
 # Mysql
 spring.datasource.url= jdbc:mysql://localhost/cars_java
@@ -28,11 +18,10 @@ spring.datasource.min-idle=10
 spring.datasource.time-between-eviction-runs-millis=1
 
 flyway.baseline-on-migrate=true
-#flyway.validate-on-migrate=false
 
 # activating test profile
 spring.profiles.active=test
 
 
-# checking options - disable after test todo
-#flyway.baseline-on-migrate=true
+# REST config
+spring.data.rest.base-path=/api
